# System-design-Agent

./: .gitignore  README.md  create_project.sh  main.py  pyproject.toml  run.sh  run_streamlit.sh  setup.sh  system_architecture.md
backend/: config.py  constants.py  main.py  middleware.py  requirements.txt
backend/agents/: architecture_generator.py  base_agent.py  cloud_retriever.py  requirements_parser.py
backend/models/: request.py  response.py
backend/routers/: design.py
backend/services/: agent_runner.py  openai_service.py  pdf_export.py
frontend/: app.py
