[tool.poetry]
name = "system-design-agent"
version = "0.1.0"
description = "AI-powered system architecture design generator"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
fastapi = ">=0.104.1"
uvicorn = ">=0.24.0"
pydantic = ">=2.5.1"
pydantic-settings = ">=2.1.0"
python-dotenv = ">=1.0.0"
openai = ">=1.3.5"
httpx = ">=0.25.2"
boto3 = ">=1.29.3"
langchain = ">=0.0.336"
reportlab = ">=4.0.7"
cairosvg = ">=2.7.1"
streamlit = ">=1.29.0"
streamlit-mermaid = ">=0.1.1"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4.3"
black = ">=23.11.0"
isort = ">=5.12.0"
mypy = ">=1.7.1"
pytest-cov = ">=4.1.0"
pytest-asyncio = ">=0.21.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
